# or-models

./: .gitignore  README.md  pyproject.toml
production_planning/: processing_times.xlsx  production_planning_linopy.ipynb  production_planning_pyoframe.ipynb  ~$processing_times.xlsx
sudoku/: Sudoku binary pyoframe.ipynb  sudoku_model.lp  sudoku_model.mps
unit_commitment/: Unit Commitment Problem I - Pumped storage_pyoframe.ipynb  pump.csv  storage.csv  turbine.csv
unit_commitment-pumped_storage/: Unit Commitment Problem I - Pumped storage_pyoframe.ipynb  pump.csv  storage.csv  turbine.csv
unit_commitment-thermal_power_station/: Unit Commintment Problem II - Thermal Power Station.ipynb  demand.csv
