[tool.poetry]
package-mode = false
name = "or-models"
version = "0.1.0"
description = ""
authors = ["Zlatan Kadragic <zlatan.kadragic@zooplus.com>"]

[tool.poetry.dependencies]
python = "3.12.6"
linopy = "^0.5.2"
gurobipy = "12.0.1"
pyarrow = "^19"
jupyter = "^1.1.1"
flox = "^0.10.3"
pint-xarray = "0.4"
numbagg = "^0.9"
sparse = "^0.16"
plotly-express = "0.4.1"
pyoframe = { extras = ["highs"], version = "^0.1.4" }
rustpy-xlsxwriter = "^0.0.7"
llvmlite="0.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
